
2007-07-29 Joseph Goldstone
  * Revised After Effects 16-bit-TIFF-to-Cineon conversion script to
    reflect SampleICC pathnames.
  * extract_probe_data now prints the extracted edge size.
  * Use sips on Mac OS X to extract the embedded image profile, so user
    need not adjust this in extraction script.
  * Update README.OSX to reflect DarwinPorts renaming itself to MacPorts.
  * Update README in RSR example dir to reflect simplified usage, and
    delete the to-do list at the end of that file since those items
    are now done.
	
2007-6-19 Max Derhak
  * Added GetExtension method to CIccMpe based tags to allow for implmentation of extended objects.

2007-6-4 Max Derhak
  * Added I/O support for ProfileSequenceId tags using CIccTagProfSeqId class.
  * Added I/O support for Colorimetric Intent Image State tag.

2007-3-29 Max Derhak
  * Deprecated Tools\Winnt\ApplyCmm.  Use SampleIccCmm instead.
  * Deprecated Tools\Winnt\ProfileDump.  Use wxProfileDump instead.

2007-3-29 Joseph Goldstone
  * Moved tools and extensions from Tools\CmdLine folder to Contrib Folder
  
2007-2-15 Max Derhak
  * Fixed bug with reading Profile Sequence Description tag.
  * Added accessor to CIccCLUT m_nPrecision member variable.
  * Added accessor to elements attached to a CIccTagMPE object.
  * Added utiltity function icGetSigStr() that displays a signature as a 4 characher
    string or as an 8 character hex number if the signature contains non alpha-numeric
    characters.
  * Minor formating changes to icProfileHeader.  Commented enums modified to eliminate
    compiler warnings.
      
2007-1-19 Max Derhak
  * Added ability to use multiple inheritance for CIccTag co-derived on IIccExtensionTag
    interface and accessed through a GetExtension() virtual function.
  * Various bug fixes when using Matrix/TRC profiles
  * Fixed various bugs with extracting tone curves from transforms attached to a CMM.
  * Added option to allow V2 to V4 encoding without clipping.

2006-12-29